// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid snapshot renders 1`] = `
<g
  className="className"
>
  <q
    lineStyle={
      Object {
        "stroke": "var(--pie-faded-primary, #DCDAFB)",
        "strokeWidth": 1,
      }
    }
    scale={[MockFunction]}
    tickValues={Array []}
    width={400}
  />
  <q
    lineStyle={
      Object {
        "stroke": "#8E88EA",
        "strokeWidth": 1,
      }
    }
    scale={[MockFunction]}
    tickValues={Array []}
    width={400}
  />
  <V
    height={400}
    offset={NaN}
    scale={
      Object {
        "bandwidth": [Function],
      }
    }
  />
</g>
`;

exports[`Grid snapshot renders if graphProps is not defined 1`] = `
<g
  className="className"
>
  <q
    lineStyle={
      Object {
        "stroke": "var(--pie-faded-primary, #DCDAFB)",
        "strokeWidth": 1,
      }
    }
    tickValues={Array []}
  />
  <q
    lineStyle={
      Object {
        "stroke": "#8E88EA",
        "strokeWidth": 1,
      }
    }
    tickValues={Array []}
  />
  <V
    offset={NaN}
    scale={
      Object {
        "bandwidth": [Function],
      }
    }
  />
</g>
`;
